// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StringsReplacer Метод replace Заменяет единственное вхождение текста на ссылку Корректно обрабатывая конец слова (не заменяя части слова) 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Ford Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>",
    ],
  ],
  "newLinksNum": 1,
  "result": "FordFocus - это слитное написание для \\"<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>\\"",
}
`;

exports[`StringsReplacer Метод replace Заменяет единственное вхождение текста на ссылку При наличии ссылки в тексте, ссылка остается нетронутой 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Rio",
      "<a href=\\"https://auto.ru/moskva/cars/kia/rio/all/\\" target=\\"_blank\\">Rio</a>",
    ],
  ],
  "newLinksNum": 1,
  "result": "<p>Текст про <a href=\\"https://auto.ru/moskva/cars/kia/rio/all/\\" target=\\"_blank\\">Rio</a>, <a href=\\"https://auto.ru/moskva/cars/kia/rio/all/\\" target=\\"_blank\\">Kia Rio</a> рулит</p>",
}
`;

exports[`StringsReplacer Метод replace Заменяет единственное вхождение текста на ссылку При отсутствии других ссылок в тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Киа Рио",
      "<a href=\\"https://auto.ru/moskva/cars/kia/rio/all/\\" target=\\"_blank\\">Киа Рио</a>",
    ],
  ],
  "newLinksNum": 1,
  "result": "Текст <span>про</span> <a href=\\"https://auto.ru/moskva/cars/kia/rio/all/\\" target=\\"_blank\\">Киа Рио</a> и только про неё",
}
`;

exports[`StringsReplacer Метод replace Заменяет единственное вхождение текста на ссылку При отсутствии другого текста 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Kia Rio",
      "<a href=\\"https://auto.ru/moskva/cars/kia/rio/all/\\" target=\\"_blank\\">Kia Rio</a>",
    ],
  ],
  "newLinksNum": 1,
  "result": "<a href=\\"https://auto.ru/moskva/cars/kia/rio/all/\\" target=\\"_blank\\">Kia Rio</a>",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки При ненулевом минимальном расстоянии между ссылками В простом тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Focus</a>",
    ],
    Array [
      "Ford Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
  ],
  "newLinksNum": 4,
  "result": "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a> (1) Camry Фокус <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Focus</a> (2) Focus Focus <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a> (3) РиоFocus <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (4)",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки При ненулевом минимальном расстоянии между ссылками При наличии html-ссылок в тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
    Array [
      "Ford Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>",
    ],
  ],
  "newLinksNum": 3,
  "result": "<p>снова <a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a> (1) <span>Rio</span>-<a href=\\"/\\">Camry Camry</a> <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (2) Focus Focus <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a> (3) Rio Rio</p>",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки При ненулевом минимальном расстоянии между ссылками При наличии html-сущностей в тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
  ],
  "newLinksNum": 3,
  "result": "<p>снова <a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a> (1) камри camry <a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>&nbsp;(2)CamryCamry <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (3)&#60;&nbsp;Ford Focus РиоFocus</p>",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки При ненулевом минимальном расстоянии между ссылками При наличии html-тегов в тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
    Array [
      "Ford Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>",
    ],
  ],
  "newLinksNum": 3,
  "result": "<p><span><a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a></span> (1) <span>Camry</span> <span>Camry</span> <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (2) <div class=\\"test\\">Focus Focus <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a> (3)</div></p>",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки При нулевом минимальном расстоянии между ссылками В простом тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
    Array [
      "Ford Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
  ],
  "newLinksNum": 5,
  "result": "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>-<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a> (1,2) <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (3) FocusFocus <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a> (4) РиоFocus <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (5)",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки При нулевом минимальном расстоянии между ссылками При наличии html-сущностей в тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
    Array [
      "Ford Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>",
    ],
  ],
  "newLinksNum": 3,
  "result": "<p>Ехал camry через камри видит <a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>&nbsp;(1)CamryCamry <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (2) &#60;&nbsp;<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a> (3) РиоFocus</p>",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки При нулевом минимальном расстоянии между ссылками При наличии html-тегов в тексте 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Фокус",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a>",
    ],
    Array [
      "Ford Focus",
      "<a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a>",
    ],
  ],
  "newLinksNum": 3,
  "result": "<p>Ехал camry через камри видит <span><a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a></span> (1) -CamryCamry <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Фокус</a> (2) <a href=\\"/\\">Focus Focus</a> <a href=\\"https://auto.ru/moskva/cars/ford/focus/all/\\" target=\\"_blank\\">Ford Focus</a> (3) РиоFocus</p>",
}
`;

exports[`StringsReplacer Метод replace Заменяет множественные вхождения текста на ссылки Учитывая лимит на количество ссылок 1`] = `
Object {
  "newLinksList": Array [
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
    Array [
      "Camry",
      "<a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a>",
    ],
  ],
  "newLinksNum": 3,
  "result": "<p>Ехал <a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a> через <a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a> видит <a href=\\"https://auto.ru/moskva/cars/toyota/camry/all/\\" target=\\"_blank\\">Camry</a> Camry Camry</p>",
}
`;

exports[`StringsReplacer Метод replace Корректно возвращает текст неизменным При наличии совпадений текста, но с другим регистром 1`] = `
Object {
  "newLinksList": Array [],
  "newLinksNum": 0,
  "result": "тойота камри - прекрасный автомобиль, как и киа рио",
}
`;
